--- a/BlueThalyzer/platforms/android/AndroidManifest.xml
+++ b/BlueThalyzer/platforms/android/AndroidManifest.xml
@@ -9,6 +9,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <intent-filter android:label="@string/launcher_name">
+            <action android:name="android.intent.action.MAIN" />
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.LAUNCHER" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data android:scheme="uber" />
+        </intent-filter>
     </application>
     <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="23" />
 </manifest>
